--- a/index.html
+++ b/index.html
@@ -1,19 +1,122 @@
-<link rel="stylesheet" href="./static/style.css">
-<h1>İKLİM DEĞİŞİKLİĞİ</h1>
+<body>
+
+    <div class="container" style="margin-left: 50px;">
+        <link rel="stylesheet" href="./static/style.css">
+        <h1>İKLİM DEĞİŞİKLİĞİ: NEDENLERİ, SONUÇLARI VE ÖNLEYİCİ ADIMLAR</h1>
 
 
-<p>
-    İklim Değişikliği Nedir
+        <p>
+            son yıllarda dünyada sıcaklık ortalamasının arttığı, kutup bölgelerindeki buzulların eridiği ve <strong>
+                küresel bir iklim değişikliğiyle </strong> karşı karşıya olunduğuna dair onlarca haber görmüş
+            olmalısınız. <br>
+            Aklınızda <strong> “Küresel iklim değişikliği nedir, nedenleri ve sonuçları neler olabilir?” </strong> gibi
+            pek çok soru taşıyorsanız tüm bunları açıklamak için öncelikle <strong> iklim </strong> kavramını
+            tanımlamalıyız. <br>
+        </p>
 
-</p>
+        <p>
+            Bir bölgede uzun süredir hâkim olan yağış tipi ve sıklığı, nem, sıcaklık, rüzgâr gibi koşulların tamamı
+            <strong> iklim </strong> başlığı altında değerlendirilir. <br>
+            <strong> İklimin </strong> o bölgenin yaşam koşulları, canlı çeşitliliği, tarımsal imkânları, sahip olduğu
+            su kaynakları üzerinde önemli bir etkisi bulunur. <br>
+            Bölgenin ekonomik ve sosyal refahını belirleyebilir. Peki; <br>
+        </p>
 
-<p>
-    İklim değişikliği, küresel ısınmayı (küresel ortalama sıcaklıkta süregelen artış) ve bunun Dünya'nın iklim sistemi üzerindeki etkilerini ifade eder
+        <p>
+            İKLİM DEĞİŞİKLİĞİ NEDİR
+        </p>
 
-</p>
 
-<img src="" alt="">
+        <p>
+            İklim değişikliği nedenlerine bakılmaksızın bir bölgedeki ortalama sıcaklık, nem, yağış ve basınç
+            değerlerinin değişmesidir. <br>
+            Bu durum o bölgenin tüm ekosistemini değiştirir. Su ve gıda krizi, aşırı sıcaklıklar, ekonomik dalgalanmalar
+            gibi birçok soruna yol açabilir. <br>
+            Küresel iklim değişikliğiyse bu sorunların tüm dünyada yaşandığı anlamına gelir ve ülkeleri bir çıkmaza
+            itebileceği gibi gelecekte canlıların yaşamını bile tehdit edebilir. <br>
+            Alınabilecek ilk tedbir, küresel iklim değişikliğinin nedenleri ve sonuçları ile ilgili bilinçlenmektir.
+            <br>
+        </p>
 
+
+        <img width="600" height="400" style="margin-left: 200px;" src="./static/img/iklim.jpg" alt="İKLİM DEĞİŞİKLİĞİ">
+
+
+        <h2>
+            İklim Değişikliğinin Nedenleri
+        </h2>
+
+        <p>
+            Bölgesel ve küresel iklim değişikliklerinin nedenleri nadiren volkanik patlamalar ya da Güneş’teki leke ve
+            patlamalar da olabilir ama günümüzdeki asıl neden insanların kontrolsüz ve aşırı faaliyetleridir. Dünya
+            nüfusunun hızla artışı ve insanların ekosistemin dengesini korumayı yeterince önemsemeyişi yüzünden her gün
+            daha ciddi bir etki kazanan bu nedenleri bilirsek daha yaşanabilir bir gelecek için neleri yapmamamız
+            gerektiğini de öğreniriz. İşte, küresel iklim değişikliğinin sebepleri:
+        </p>
+
+        <h2>
+            Sera Gazlarının Artışı
+        </h2>
+
+        <p>
+            “İklim değişikliği neden olur?” sorusuna verilebilecek ilk cevaplardan biri, sera gazlarıdır. Karbondioksit,
+            metan, nitröz oksit, ozon ve su buharı; sera gazlarına örnek gösterilebilir. Peki, sera gazları iklimi nasıl
+            etkiler? Yeryüzündeki ısının bir kısmı atmosfere yükselir ve uzaya çıkarak yok olur. Küresel sıcaklık bu
+            sayede ideal seviyelerde kalır. Sera gazlarının atmosferdeki yoğunluğu arttıkça “sera etkisi” adı verilen
+            bir felakete zemin hazırlanır.
+
+            Atmosfere tutunan sera gazları, yeryüzünden yükselen ısıya karşı bir kalkan gibi çalışır. Isıyı önce tutup
+            kendine hapseder, sonra yeryüzüne geri yansıtır. Küresel ısınmayı artırıp buzulların erimesine, iklim
+            felaketlerine yol açar. Son yıllarda dünyanın pek çok bölgesinde ölümlere yol açan aşırı sıcaklıkların
+            altında da bu sebep bulunur.
+        </p>
+
+        <h2>
+
+        </h2>
+
+        <p>
+
+        </p>
+
+        <h2>
+
+        </h2>
+
+        <p>
+
+        </p>
+
+        <h2>
+
+        </h2>
+
+        <P>
+
+        </P>
+
+        <h2>
+
+        </h2>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+
+
+</body>
 
 
 
