--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             Bölgenin ekonomik ve sosyal refahını belirleyebilir. Peki; <br>
         </p>
 
-        <p>
+        <h2>
             İKLİM DEĞİŞİKLİĞİ NEDİR
-        </p>
+        </h2>
 
 
         <p>
@@ -39,7 +39,7 @@
         </p>
 
 
-        <img width="600" height="400" style="margin-left: 200px;" src="./static/img/iklim.jpg" alt="İKLİM DEĞİŞİKLİĞİ">
+        <img width="600" height="400" style="margin-left: 500px;" src="./static/img/iklim.jpg" alt="İKLİM DEĞİŞİKLİĞİ">
 
 
         <h2>
@@ -72,41 +72,190 @@
         </p>
 
         <h2>
-
+            Fosil Yakıtların Kullanımı
         </h2>
 
         <p>
-
+            Doğada her şeyin birbiriyle ilintili olduğu, kusursuz bir denge vardır. Herhangi bir ihmal, bir domino
+            etkisi uyandırarak bütün dengeyi bozabilir. Fosil yakıtların kullanımı da böyle ihmaldir. Petrol, kömür gibi
+            fosil yakıtlar atmosferdeki karbondioksit yoğunluğunun en büyük sebebidir. Hükûmetlerarası İklim Değişikliği
+            Paneli(IPCC)’ne göre 2004 yılında atmosfere salınan sera gazlarının %56’sı, fosil yakıt kullanımından
+            kaynaklanan karbondioksittir. Dünya genelinde en yoğun kullanılan fosil yakıtlar sırasıyla kömür, petrol ve
+            doğal gazdır. Kömür, doğal gaza oranla yaklaşık 2 kat fazla karbondioksit salınımı yapar. Yaşanabilir bir
+            dünya için doğal gazı bile bilinçli şekilde kullanmak gerekirken kömürün en çok kullanılan fosil yakıt
+            olması, bugün yaşanan küresel ilkim değişikliklerine bir sebeptir.
         </p>
 
         <h2>
-
+            Fosil Yakıtların Kullanımı
         </h2>
 
         <p>
-
+            Doğada her şeyin birbiriyle ilintili olduğu, kusursuz bir denge vardır. Herhangi bir ihmal, bir domino
+            etkisi uyandırarak
+            bütün dengeyi bozabilir. Fosil yakıtların kullanımı da böyle ihmaldir. Petrol, kömür gibi fosil yakıtlar
+            atmosferdeki karbondioksit yoğunluğunun en büyük sebebidir. Hükûmetlerarası İklim Değişikliği
+            Paneli(IPCC)’ne göre
+            2004 yılında atmosfere salınan sera gazlarının %56’sı, fosil yakıt kullanımından kaynaklanan
+            karbondioksittir.
+            Dünya genelinde en yoğun kullanılan fosil yakıtlar sırasıyla kömür, petrol ve doğal gazdır. Kömür,
+            doğal gaza oranla yaklaşık 2 kat fazla karbondioksit salınımı yapar. Yaşanabilir bir dünya için doğal gazı
+            bile
+            bilinçli şekilde kullanmak gerekirken kömürün en çok kullanılan fosil yakıt olması, bugün yaşanan küresel
+            ilkim değişikliklerine bir sebeptir.
         </p>
 
         <h2>
-
+            Ormanların Yok Oluşu
         </h2>
 
         <P>
+            Ormanlar, dünyanın akciğerleri olmalarının yanı sıra oksijen salınımından çok daha fazlasını yaparlar.
+            Fotosentez yapabilen dev bir organ gibi çalışan ormanlar, atmosfere salınan karbondioksiti emerek oksijene
+            dönüştürür. Bu sayede sera gazlarının yıkıcı etkisini azaltır, küresel sıcaklığın ideal seviyelerde
+            kalmasını sağlar. Yağmur bulutlarının ve yağışın oluşmasını sağlayarak kuraklığı önler. Her orman kendine
+            has bir ekosistem oluşturarak çeşitli bitkilere, mantar ve yosunlara, toprak altında ya da üstünde yaşayan
+            böceklere, hayvanlara ve mikroorganizmalara ev sahipliği yapar.
 
+            Ağacın olmadığı yerde hayatın varlığından söz etmek zordur. Çünkü yeşilin yerini çorak topraklar aldıkça su
+            ve gıda krizi, kuraklık, aşırı sıcaklıklar, hava kirliliği gibi sorunlar da kaçınılmaz olur. Kontrolsüz ağaç
+            kesimi ve insan kaynaklı yangınlar, ormanları yok eder. Yok olan her orman, küresel sıcaklığın biraz daha
+            artması demektir ve bu durum da yeni orman yangınlarına yol açar. Bu yıkıcı kısır döngüyü önlemek içinse
+            yaşayan her bir ağaca sımsıkı sarılmak gerekir.
         </P>
 
         <h2>
+            Endüstriyel Faaliyetler
+        </h2>
 
+        <p>
+            Atmosferdeki sera gazı salınımını artıran en önemli unsur, 1760’lı yıllarda başlayan Sanayi Devrimi’dir.
+            1750 yılı ile 2000’li yıllardaki değerler karşılaştırıldığında atmosferdeki karbondioksit oranının %40,
+            metan gazı oranının ise %150 arttığı gözlemlenmiştir. Üstelik endüstriyel faaliyetler sadece sera gazlarının
+            salınımını artırmakla da kalmamıştır. Aynı zamanda endüstriyel faaliyetlerde daha ekonomik olduğu için fosil
+            yakıt tüketimine başvurulmuştur. Kömür ve petrol kullanımının en yaygın olduğu alan endüstri sektörüdür
+        </p>
+
+        <h2>
+            Tarımsal Faaliyetler
+        </h2>
+
+        <p>
+            İklim değişikliğinin tarımsal faaliyetler üzerindeki olumsuz etkileri oldukça açıktır. Su krizi, toprağın
+            verimsizleşmesi, aşırı sıcaklıklar derken tarımın icrası her geçen yıl zorlaşır. Ancak tarımsal
+            faaliyetlerin de iklim üzerinde olumsuz etkileri bulunur. Dünya üzerinde sera gazı artışını tetikleyen
+            faktörler arasında tarımsal faaliyetler %20’lik ciddi bir paya sahiptir. Enerji tüketimi, üretim, gübreleme
+            ve ilaç kullanımı gibi faaliyetler karbondioksit, metan ve nitröz oksit gazlarının salınımını artırır.
+            Ayrıca az yağış alan bölgelerde çok su isteyen bitkiler yetiştirmek ya da bilinçsiz sulama yöntemleri
+            kullanmak da su ayak izini artırdığı için iklim krizi sebepleri arasında sayılabilir.
+        </p>
+
+
+        <img width="600" height="400" style="margin-left: 500px;" src="static/img/iklim degisikligi nasıl önlenir.jpg"
+            alt="İKLİM DEĞİŞİKLİĞİ">
+
+        <h2>
+            KÜRESEL İKLİM DEĞİŞİKLİĞİ NASIL ÖNLENİR
         </h2>
 
 
+        <p>
+            İklim değişikliğinin gözle görülür sonuçları gözlemlenmeye başladığından beri, bilim insanları neler
+            yapılabileceği konusunda çalışmalar yürütüyor. Küresel Isınma BM İklim Değişikliği Çerçeve Sözleşmesi ve
+            KYOTO Protokolü gibi adımlarla, hükümetler de karbon salınımını azaltarak iklim değişikliği etkilerini
+            azaltmaya çaba sarf ediyor. Küresel iklim değişikliğinin önüne geçmek için sadece hükümetlerin politikalar
+            oluşturması yeterli değil. Toplumun küresel ısınma konusunda bilinçlendirilmesi de gerekli. Uzmanlar,
+            bireysel olarak atılacak küçük adımların bile ortalama sıcaklıklarda gözlenen artışı azaltma konusunda
+            oldukça etkili olacağı görüşünde.
 
+            Küresel iklim değişikliği etkilerini azaltmak için bireylerin yapabileceği pek çok şey var. Öncelikle,
+            hükümetler üstünde sürdürülebilir politikalar üretmeleri konusunda baskı oluşturmaları, çevre odaklı
+            kararlar alınmasında oldukça etkili. Örneğin, yenilenebilir enerji kaynaklarının teşvik edilmesini ve fosil
+            kaynaklardan enerji üretilmesinin sınırlandırılmasının hükümetlerden talep etmesi gerektiğinin altı uzmanlar
+            tarafından özellikle çiziliyor. Peki başka neler yapılabilir?
+        </p>
 
+        <h2>
+            Sürdürülebilir Tarıma Destek Olun
+        </h2>
 
+        <p>
+            Et ve süt üretimi sırasında, atmosfere büyük oranda karbon salınımı yapılıyor. Et ve süt tüketiminizi
+            kısıtlayarak karbon ayak izinizi önemli ölçüde azaltabilirsiniz. Bunun yanı sıra sürdürülebilir tarım
+            ürünlerini tercih etmeniz de son derece önemli. Egzotik meyve ve sebze tüketiminizi en aza indirmeniz ve
+            alışveriş yaparken yerel tarım ürünlerini tercih ederek nakliye sırasında doğaya salınan sera gazlarını
+            azalmasına katkıda bulunabilirsiniz.
+        </p>
 
+        <h2>
+            Uçak Kullanımızı Sınırlandırın
+        </h2>
 
+        <p>
+            Bir uçağın havalanması için gereken fosil yakıt miktarı, düşündüğünüzden oldukça fazla. Bu nedenle, uzmanlar
+            yakın mesafeler için uçmak yerine tren gibi daha çevreci seçeneklere yönelmeyi öneriyor. Diğer taraftan,
+            araç satın alırken hibrit ya da elektrikli araba gibi seçeneklere yönelerek daha az fosil yakıt
+            kullanabilirsiniz. Kısa mesafeler için araba kullanmayı bırakabilir, yürüyüş ve bisiklet gibi seçenekleri
+            değerlendirebilirsiniz.
+        </p>
 
+        <h2>
+            Faturalarınızı Azaltın
+        </h2>
 
+        <p>
+            Karbon salınımını azaltmanın bir diğer yolu enerji kullanımınızı azaltmak. Elektrik, su ve doğalgaz
+            kullanımından nasıl tasarruf edeceğinizi öğrenerek ve tasarruf yöntemlerini uygulayarak üstünüze düşen
+            görevi yerine getirebilirsiniz.
+        </p>
+
+        <h2>
+            Yeşil Alanları Koruyun
+        </h2>
+
+        <p>
+            Şehir içinde yer alan park ve bahçeler, kentlerin aşırı ısınmasının önüne geçiyor ve sıcaklığı önemli ölçüde
+            dengeliyor. Çevrenizde bulunan atıl alanların yeşillendirilmesi için belediyeleri harekete geçirebilir,
+            ağaçlandırma ve yeşillendirme çalışmalarına destek verebilirsiniz.
+        </p>
+
+        <h2>
+            Daha Az Tüketin
+        </h2>
+
+        <p>
+            Tükettiğiniz her ürünün bir karbon ayak izi var. Bu nedenle daha sade bir yaşam benimseyerek atmosfere
+            salınan karbon miktarını önemli ölçüde azaltabilirsiniz. Örneğin, kıyafet satın alırken uzun süre
+            kullanabileceğiniz zamansız parçalara yönelebilirsiniz. Sadece tüketebileceğiniz kadar yiyecek alabilir,
+            eşyalarınızı onararak yeniden kullanma prensibi edinebilir ve daha az çöp çıkarmaya çabalayabilirsiniz.
+        </p>
+
+        <h2>
+            İnsanlarla Konuşun
+        </h2>
+
+        <p>
+            İklim değişikliği etkilerini azaltmak için çaba sarf etmek kadar daha fazla insanı bir şeyler değiştirmeye
+            ikna etmek de önemli. Hayatınızda yaptığınız değişiklikler üstüne etrafınızdaki insanlarla konuşarak ve
+            onlara küresel ısınma konusunda neler yapabileceklerini anlatarak onların da yaşam stillerini
+            değiştirmelerini sağlayabilirsiniz.
+        </p>
+
+        <h2>
+            Yatırımlarınızı Gözden Geçirin
+        </h2>
+
+        <p>
+            Hangi fona yatırım yaptığınızı biliyor musunuz? Fosil yakıt kullanımını finanse eden fonlar yerine
+            yenilenebilir enerji ve sürdürülebilir tarım gibi uygulamaları destekleyen fonlara yönelerek küçük de olsa
+            bir değişim yaratabilirsiniz. Temiz enerjiye yatırım yapmak için yatırım fonları hakkında detaylı bilgiye
+            buradan​ ulaşabilirsiniz.
+
+            Odeabank olarak sürdürülebilirliğe ve çevreye önem veriyoruz. Sürdürülebilirlik ve çevre konularında
+            hazırladığımız yazılarla farkındalık yaratmayı arzuluyoruz. Sitemizde yer alan tüm içerikler bilgilendirme
+            amaçlı hazırlanmıştır. İçeriklerdeki bilgiler konusunda konunun uzmanlarına danışmanızı ve önerileri
+            uygulamadan evvel bir uzman görüşü almanızı tavsiye ederiz.
+        </p>
 
 
 
@@ -117,6 +266,3 @@
 
 
 </body>
-
-
-
